lastest complete for transfer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,13 @@
     <string name="title_activity_book">BookActivity</string>
     <string name="title_activity_book_display">BookDisplayActivity</string>
 
+
+    <!-- Content for sliding menu-->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_dash_board">DashBoardActivity</string>
+
 </resources>
